package com.andrew.blog.entities;

public enum Role {
	ROLE_USER,
	ROLE_ADMIN
}
