package com.andrew.blog.entities;

public enum Status {
	DRAFT,
	PUBLISHED,
	ARCHIVED
}
